# silent_code

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
app/accounts/: admin.py  forms.py  models.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py
app/accounts/templates/accounts/: signup.html
app/accounts/templates/registration/: login.html
app/accounts/tests/: test_auth.py
app/silent_code/: admin.py  apps.py  facade.py  forms.py  models.py  urls.py  views.py
app/silent_code/migrations/: 0001_initial.py
app/silent_code/templates/: base.html
app/silent_code/templates/silent_code/: home.html  task_confirm_delete.html  task_form.html
app/silent_code/tests/: test_app.py
config/: urls.py
config/settings/: base.py  development.py  production.py
config/tests/: test_settings.py
